[tool.poetry]
name = "ohtu_palautusrepo"
version = "0.1.0"
description = ""
authors = ["Reetta S <reetta.savaloja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"
robotframework = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
